1.8.2 update for MC 1.20