@@ -1,44 +1,37 @@
 package com.bobmowzie.mowziesmobs.server.config;
 
-import com.bobmowzie.mowziesmobs.MMCommon;
-import com.bobmowzie.mowziesmobs.datagen.MMBiomeTags;
-import com.bobmowzie.mowziesmobs.datagen.StructureSetHandler;
-import com.bobmowzie.mowziesmobs.server.item.ItemHandler;
-import net.minecraft.core.Holder;
-import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.resources.ResourceKey;
+import com.bobmowzie.mowziesmobs.MowziesMobs;
 import net.minecraft.resources.ResourceLocation;
-import net.minecraft.tags.BiomeTags;
-import net.minecraft.tags.BlockTags;
-import net.minecraft.tags.TagKey;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.Items;
-import net.minecraft.world.level.biome.Biomes;
-import net.minecraft.world.level.block.Block;
-import net.minecraft.world.level.dimension.BuiltinDimensionTypes;
-import net.minecraft.world.level.levelgen.structure.BuiltinStructureSets;
-import net.neoforged.neoforge.common.ModConfigSpec;
-import net.neoforged.neoforge.common.Tags;
+import net.minecraftforge.common.ForgeConfigSpec;
+import net.minecraftforge.common.ForgeConfigSpec.BooleanValue;
+import net.minecraftforge.common.ForgeConfigSpec.ConfigValue;
+import net.minecraftforge.common.ForgeConfigSpec.DoubleValue;
+import net.minecraftforge.common.ForgeConfigSpec.IntValue;
+import net.minecraftforge.fml.common.Mod;
+import net.minecraftforge.registries.ForgeRegistries;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
+@Mod.EventBusSubscriber(modid = MowziesMobs.MODID, bus = Mod.EventBusSubscriber.Bus.MOD)
 public final class ConfigHandler {
-    private static final String LANG_PREFIX = "config." + MMCommon.MODID + ".";
+    private ConfigHandler() {}
+
+    private static final String LANG_PREFIX = "config." + MowziesMobs.MODID + ".";
 
     public static final Common COMMON;
     public static final Client CLIENT;
 
-    private static final ModConfigSpec.Builder COMMON_BUILDER = new ModConfigSpec.Builder();
-    private static final ModConfigSpec.Builder CLIENT_BUILDER = new ModConfigSpec.Builder();
+    private static final ForgeConfigSpec.Builder COMMON_BUILDER = new ForgeConfigSpec.Builder();
+    private static final ForgeConfigSpec.Builder CLIENT_BUILDER = new ForgeConfigSpec.Builder();
 
-    public static ModConfigSpec COMMON_CONFIG;
-    public static ModConfigSpec CLIENT_CONFIG;
+    public static ForgeConfigSpec COMMON_CONFIG;
+    public static ForgeConfigSpec CLIENT_CONFIG;
 
     private static final Predicate<Object> STRING_PREDICATE = s -> s instanceof String;
-    private static final Predicate<Object> RESOURCE_LOCATION_PREDICATE = STRING_PREDICATE.and(s -> ResourceLocation.tryParse((String) s) != null);
+    private static final Predicate<Object> RESOURCE_LOCATION_PREDICATE = STRING_PREDICATE.and(s -> ResourceLocation.isValidResourceLocation((String) s));
     private static final Predicate<Object> BIOME_COMBO_PREDICATE = STRING_PREDICATE.and(s -> {
         String bigString = (String) s;
         String[] typeStrings = bigString.replace(" ", "").split("[,!]");
@@ -49,8 +42,7 @@ public final class ConfigHandler {
         }
         return true;
     });
-
-    private static final Predicate<Object> ITEM_NAME_PREDICATE = RESOURCE_LOCATION_PREDICATE.and(s -> BuiltInRegistries.ITEM.containsKey(ResourceLocation.tryParse((String) s)));
+    private static final Predicate<Object> ITEM_NAME_PREDICATE = RESOURCE_LOCATION_PREDICATE.and(s -> ForgeRegistries.ITEMS.containsKey(new ResourceLocation((String) s)));
 
     static {
         COMMON = new Common(COMMON_BUILDER);
@@ -62,10 +54,10 @@ public final class ConfigHandler {
 
     // Config templates
     public static class BiomeConfig {
-        BiomeConfig(final ModConfigSpec.Builder builder, List<? extends String> biomeTags, List<? extends String> biomeWhitelist, List<? extends String> biomeBlacklist) {
+        BiomeConfig(final ForgeConfigSpec.Builder builder, List<? extends String> biomeTags, List<? extends String> biomeWhitelist, List<? extends String> biomeBlacklist) {
             builder.push("biome_config");
             builder.comment("Mowzie's Mobs bosses cannot generate in modded or non-overworld biomes unless the biome is added to the 'has_structure/has_mowzie_structure' tag via a datapack!");
-            this.biomeTags = builder.comment("Each entry is a combination of allowed biome tags or biome names.", "Separate types with commas to require biomes to have all tags in an entry", "Put a '!' before a biome tag to mean NOT that tag", "A blank entry means all biomes. No entries means no biomes.", "For example, 'minecraft:is_forest,c:is_spooky,!c:is_snowy' would mean all biomes that are spooky forests but not snowy forests", "'!minecraft:is_mountain' would mean all non-mountain biomes")
+            this.biomeTags = builder.comment("Each entry is a combination of allowed biome tags or biome names.", "Separate types with commas to require biomes to have all tags in an entry", "Put a '!' before a biome tag to mean NOT that tag", "A blank entry means all biomes. No entries means no biomes.", "For example, 'minecraft:is_forest,forge:is_spooky,!forge:is_snowy' would mean all biomes that are spooky forests but not snowy forests", "'!minecraft:is_mountain' would mean all non-mountain biomes")
                     .translation(LANG_PREFIX + "biome_tags")
                     .defineList("biome_tags", biomeTags, BIOME_COMBO_PREDICATE);
             this.biomeWhitelist = builder.comment("Allow spawns in these biomes regardless of the biome tag settings")
@@ -77,15 +69,15 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> biomeTags;
+        public final ConfigValue<List<? extends String>> biomeTags;
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> biomeWhitelist;
+        public final ConfigValue<List<? extends String>> biomeWhitelist;
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> biomeBlacklist;
+        public final ConfigValue<List<? extends String>> biomeBlacklist;
     }
 
     public static class SpawnConfig {
-        SpawnConfig(final ModConfigSpec.Builder builder, int spawnRate, int minGroupSize, int maxGroupSize, double extraRarity, BiomeConfig biomeConfig, List<? extends String> allowedBlocks, List<? extends String> allowedBlockTags, int heightMax, int heightMin, boolean needsDarkness, boolean needsSeeSky, boolean needsCantSeeSky, List<String> avoidStructures) {
+        SpawnConfig(final ForgeConfigSpec.Builder builder, int spawnRate, int minGroupSize, int maxGroupSize, double extraRarity, BiomeConfig biomeConfig, List<? extends String> allowedBlocks, List<? extends String> allowedBlockTags, int heightMax, int heightMin, boolean needsDarkness, boolean needsSeeSky, boolean needsCantSeeSky, List<String> avoidStructures) {
             builder.comment("Controls for vanilla-style mob spawning");
             builder.push("spawn_config");
             this.spawnRate = builder.comment("Smaller number causes less spawning, 0 to disable spawning")
@@ -103,7 +95,7 @@ public final class ConfigHandler {
             this.biomeConfig = biomeConfig;
             this.dimensions = builder.comment("Names of dimensions this mob can spawn in")
                     .translation(LANG_PREFIX + "dimensions")
-                    .defineList("dimensions", Collections.singletonList(string(BuiltinDimensionTypes.OVERWORLD)), STRING_PREDICATE);
+                    .defineList("dimensions", Collections.singletonList("minecraft:overworld"), STRING_PREDICATE);
             this.allowedBlocks = builder.comment("Names of blocks this mob is allowed to spawn on. Leave blank to ignore block names.")
                     .translation(LANG_PREFIX + "allowed_blocks")
                     .defineList("allowed_blocks", allowedBlocks, STRING_PREDICATE);
@@ -131,37 +123,37 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.IntValue spawnRate;
+        public final IntValue spawnRate;
 
-        public final ModConfigSpec.IntValue minGroupSize;
+        public final IntValue minGroupSize;
 
-        public final ModConfigSpec.IntValue maxGroupSize;
+        public final IntValue maxGroupSize;
 
-        public final ModConfigSpec.DoubleValue extraRarity;
+        public final DoubleValue extraRarity;
 
         public final BiomeConfig biomeConfig;
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> dimensions;
+        public final ConfigValue<List<? extends String>> dimensions;
 
-        public final ModConfigSpec.IntValue heightMin;
+        public final IntValue heightMin;
 
-        public final ModConfigSpec.IntValue heightMax;
+        public final IntValue heightMax;
 
-        public final ModConfigSpec.BooleanValue needsDarkness;
+        public final BooleanValue needsDarkness;
 
-        public final ModConfigSpec.BooleanValue needsSeeSky;
+        public final BooleanValue needsSeeSky;
 
-        public final ModConfigSpec.BooleanValue needsCantSeeSky;
+        public final BooleanValue needsCantSeeSky;
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> allowedBlocks;
+        public final ConfigValue<List<? extends String>> allowedBlocks;
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> allowedBlockTags;
+        public final ConfigValue<List<? extends String>> allowedBlockTags;
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> avoidStructures;
+        public final ConfigValue<List<? extends String>> avoidStructures;
     }
 
     public static class GenerationConfig {
-        GenerationConfig(final ModConfigSpec.Builder builder, int generationDistance, int generationSeparation, BiomeConfig biomeConfig, float heightMin, float heightMax, List<String> avoidStructures) {
+        GenerationConfig(final ForgeConfigSpec.Builder builder, int generationDistance, int generationSeparation, BiomeConfig biomeConfig, float heightMin, float heightMax, List<String> avoidStructures) {
             builder.comment("Controls for spawning structure/mob with world generation");
             builder.push("generation_config");
             this.generationDistance = builder.comment("Smaller number causes more generation, -1 to disable generation", "Maximum number of chunks between placements of this mob/structure.", "NO LONGER USED! USE DATAPACK INSTEAD")
@@ -183,21 +175,21 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.IntValue generationDistance;
+        public final IntValue generationDistance;
 
-        public final ModConfigSpec.IntValue generationSeparation;
+        public final IntValue generationSeparation;
 
         public final BiomeConfig biomeConfig;
 
-        public final ModConfigSpec.DoubleValue heightMin;
+        public final DoubleValue heightMin;
 
-        public final ModConfigSpec.DoubleValue heightMax;
+        public final DoubleValue heightMax;
 
-        public final ModConfigSpec.ConfigValue<List<? extends String>> avoidStructures;
+        public final ConfigValue<List<? extends String>> avoidStructures;
     }
 
     public static class CombatConfig {
-        CombatConfig(final ModConfigSpec.Builder builder, float healthMultiplier, float attackMultiplier) {
+        CombatConfig(final ForgeConfigSpec.Builder builder, float healthMultiplier, float attackMultiplier) {
             builder.push("combat_config");
             this.healthMultiplier = builder.comment("Scale mob health by this value")
                     .translation(LANG_PREFIX + "health_multiplier")
@@ -208,13 +200,13 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.DoubleValue healthMultiplier;
+        public final DoubleValue healthMultiplier;
 
-        public final ModConfigSpec.DoubleValue attackMultiplier;
+        public final DoubleValue attackMultiplier;
     }
 
     public static class ToolConfig {
-        ToolConfig(final ModConfigSpec.Builder builder, float attackDamage, float attackSpeed) {
+        ToolConfig(final ForgeConfigSpec.Builder builder, float attackDamage, float attackSpeed) {
             builder.push("tool_config");
             this.attackDamage = builder.comment("Tool attack damage")
                     .translation(LANG_PREFIX + "attack_damage")
@@ -225,16 +217,16 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.DoubleValue attackDamage;
+        public final DoubleValue attackDamage;
         
         public float attackDamageValue = 9;
         public float attackSpeedValue = 0.9F;
 
-        public final ModConfigSpec.DoubleValue attackSpeed;
+        public final DoubleValue attackSpeed;
     }
 
     public static class ArmorConfig {
-        ArmorConfig(final ModConfigSpec.Builder builder) {
+        ArmorConfig(final ForgeConfigSpec.Builder builder) {
             builder.push("armor_config");
             this.damageReductionMultiplier = builder.comment("Multiply armor damage reduction by this amount. See official Minecraft Wiki for an explanation of how armor damage reduction works.")
                     .translation(LANG_PREFIX + "damage_reduction_multiplier")
@@ -245,8 +237,8 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.DoubleValue damageReductionMultiplier;
-        public final ModConfigSpec.DoubleValue toughnessMultiplier;
+        public final DoubleValue damageReductionMultiplier;
+        public final DoubleValue toughnessMultiplier;
 
         public float damageReductionMultiplierValue = 1.0f;
         public float toughnessMultiplierValue = 1.0f;
@@ -254,15 +246,16 @@ public final class ConfigHandler {
 
     // Mob configuration
     public static class Foliaath {
-        Foliaath(final ModConfigSpec.Builder builder) {
+        Foliaath(final ForgeConfigSpec.Builder builder) {
             builder.push("foliaath");
             spawnConfig = new SpawnConfig(builder,
                     70, 1, 4, 1,
-                    new BiomeConfig(builder, Collections.singletonList(string(Tags.Biomes.IS_JUNGLE)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("minecraft:is_jungle"), Collections.emptyList(), Collections.emptyList()),
                     Collections.emptyList(),
-                    Arrays.asList(string(BlockTags.ANIMALS_SPAWNABLE_ON), string(BlockTags.LEAVES), string(BlockTags.LOGS)),
+                    Arrays.asList("minecraft:animals_spawnable_on", "minecraft:leaves", "minecraft:logs"),
                     -65, 60, true, false, false,
-                    Arrays.asList(string(BuiltinStructureSets.VILLAGES), string(BuiltinStructureSets.PILLAGER_OUTPOSTS))
+                    Arrays.asList("minecraft:villages", "minecraft:pillager_outposts")
+
             );
             combatConfig = new CombatConfig(builder, 1, 1);
             builder.pop();
@@ -274,16 +267,16 @@ public final class ConfigHandler {
     }
 
     public static class Umvuthana {
-        Umvuthana(final ModConfigSpec.Builder builder) {
+        Umvuthana(final ForgeConfigSpec.Builder builder) {
             builder.push("umvuthana");
             builder.comment("Controls spawning for Umvuthana hunting groups", "Group size controls how many raptors spawn, not followers", "See Umvuthi config for grove structure controls");
             spawnConfig = new SpawnConfig(builder,
                     5, 1, 1, 1,
-                    new BiomeConfig(builder, Collections.singletonList(string(Tags.Biomes.IS_SAVANNA)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("minecraft:is_savanna"), Collections.emptyList(), Collections.emptyList()),
                     Collections.emptyList(),
-                    Arrays.asList(string(BlockTags.ANIMALS_SPAWNABLE_ON), string(BlockTags.SAND)),
+                    Arrays.asList("minecraft:animals_spawnable_on", "minecraft:sand"),
                     -65, 60, false, false, false,
-                    Arrays.asList(string(BuiltinStructureSets.VILLAGES), string(BuiltinStructureSets.PILLAGER_OUTPOSTS), string(StructureSetHandler.UMVUTHANA_GROVES))
+                    Arrays.asList("minecraft:villages", "minecraft:pillager_outposts", "mowziesmobs:umvuthana_groves")
             );
             combatConfig = new CombatConfig(builder,1, 1);
             builder.pop();
@@ -295,15 +288,15 @@ public final class ConfigHandler {
     }
 
     public static class Naga {
-        Naga(final ModConfigSpec.Builder builder) {
+        Naga(final ForgeConfigSpec.Builder builder) {
             builder.push("naga");
             spawnConfig = new SpawnConfig(builder,
                     20, 1, 2, 1,
-                    new BiomeConfig(builder, Arrays.asList(string(Tags.Biomes.IS_BEACH) + "," + string(Tags.Biomes.IS_MOUNTAIN), string(Tags.Biomes.IS_BEACH) + "," + string(BiomeTags.IS_HILL)), Collections.singletonList(string(Biomes.STONY_SHORE)), Collections.emptyList()),
+                    new BiomeConfig(builder, Arrays.asList("minecraft:is_beach,minecraft:is_mountain", "minecraft:is_beach,minecraft:is_hill"), Collections.singletonList("minecraft:stony_shore"), Collections.emptyList()),
                     Collections.emptyList(),
-                    List.of(string(BlockTags.ANIMALS_SPAWNABLE_ON), string(BlockTags.BASE_STONE_OVERWORLD)),
+                    Arrays.asList("minecraft:animals_spawnable_on", "minecraft:base_stone_overworld"),
                     -65, 68, true, true, false,
-                    Arrays.asList(string(BuiltinStructureSets.VILLAGES), string(BuiltinStructureSets.PILLAGER_OUTPOSTS))
+                    Arrays.asList("minecraft:villages", "minecraft:pillager_outposts")
             );
             combatConfig = new CombatConfig(builder,1, 1);
             builder.pop();
@@ -315,13 +308,13 @@ public final class ConfigHandler {
     }
 
     public static class Lantern {
-        Lantern(final ModConfigSpec.Builder builder) {
+        Lantern(final ForgeConfigSpec.Builder builder) {
             builder.push("lantern");
             spawnConfig = new SpawnConfig(builder,
                     5, 2, 4, 1,
-                    new BiomeConfig(builder, Collections.singletonList(string(Tags.Biomes.IS_FOREST) + "," + string(MMBiomeTags.IS_MAGICAL) + "," + inverted(Tags.Biomes.IS_SNOWY)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("minecraft:is_forest,mowziesmobs:is_magical,!forge:is_snowy"), Collections.emptyList(), Collections.emptyList()),
                     Collections.emptyList(),
-                    Arrays.asList(string(BlockTags.ANIMALS_SPAWNABLE_ON), string(BlockTags.LEAVES), string(BlockTags.LOGS)),
+                    Arrays.asList("minecraft:animals_spawnable_on", "minecraft:leaves", "minecraft:logs"),
                     -65, 60, true, false, false,
                     Collections.emptyList()
             );
@@ -335,13 +328,13 @@ public final class ConfigHandler {
     }
 
     public static class Grottol {
-        Grottol(final ModConfigSpec.Builder builder) {
+        Grottol(final ForgeConfigSpec.Builder builder) {
             builder.push("grottol");
             this.spawnConfig = new SpawnConfig(builder,
                     2, 1, 1, 1,
-                    new BiomeConfig(builder, Collections.singletonList(inverted(Tags.Biomes.IS_MUSHROOM)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("!forge:is_mushroom"), Collections.emptyList(), Collections.emptyList()),
                     Collections.emptyList(),
-                    Collections.singletonList(string(BlockTags.BASE_STONE_OVERWORLD)),
+                    Collections.singletonList("minecraft:base_stone_overworld"),
                     16, -65, true, false, true,
                     Collections.emptyList()
             );
@@ -355,10 +348,10 @@ public final class ConfigHandler {
     }
 
     public static class FerrousWroughtnaut {
-        FerrousWroughtnaut(final ModConfigSpec.Builder builder) {
+        FerrousWroughtnaut(final ForgeConfigSpec.Builder builder) {
             builder.push("ferrous_wroughtnaut");
             generationConfig = new GenerationConfig(builder, 15, 5,
-                    new BiomeConfig(builder, Collections.singletonList(inverted(Tags.Biomes.IS_OCEAN)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("!minecraft:is_ocean"), Collections.emptyList(), Collections.emptyList()),
                     20, 50,
                     Collections.emptyList()
             );
@@ -378,21 +371,21 @@ public final class ConfigHandler {
         public final GenerationConfig generationConfig;
 
         public final CombatConfig combatConfig;
-        public final ModConfigSpec.BooleanValue hasBossBar;
+        public final BooleanValue hasBossBar;
 
-        public final ModConfigSpec.BooleanValue healsOutOfBattle;
+        public final BooleanValue healsOutOfBattle;
 
-        public final ModConfigSpec.BooleanValue resetHealthWhenRespawn;
+        public final BooleanValue resetHealthWhenRespawn;
     }
 
     public static class Umvuthi {
-        Umvuthi(final ModConfigSpec.Builder builder) {
+        Umvuthi(final ForgeConfigSpec.Builder builder) {
             builder.push("umvuthi");
             builder.comment("Generation controls for Umvuthana Groves");
             generationConfig = new GenerationConfig(builder, 25, 8,
-                    new BiomeConfig(builder, Collections.singletonList(string(Tags.Biomes.IS_SAVANNA)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("minecraft:is_savanna"), Collections.emptyList(), Collections.emptyList()),
                     50, 100,
-                    Arrays.asList(string(BuiltinStructureSets.VILLAGES), string(BuiltinStructureSets.PILLAGER_OUTPOSTS))
+                    Arrays.asList("minecraft:villages", "minecraft:pillager_outposts")
             );
             combatConfig = new CombatConfig(builder, 1, 1);
             this.hasBossBar = builder.comment("Disable/enable Umvuthi's boss health bar")
@@ -403,7 +396,7 @@ public final class ConfigHandler {
                     .define("heals_out_of_battle", true);
             this.whichItem = builder.comment("Which item Umvuthi desires in exchange for the Sun's Blessing")
                     .translation(LANG_PREFIX + "trade_which_item")
-                    .define("trade_which_item", string(Items.GOLD_BLOCK), ITEM_NAME_PREDICATE);
+                    .define("trade_which_item", "minecraft:gold_block", ITEM_NAME_PREDICATE);
             this.howMany = builder.comment("How many of the item Umvuthi desires in exchange for the Sun's Blessing")
                     .translation(LANG_PREFIX + "trade_how_many")
                     .defineInRange("trade_how_many", 7, 0, 64);
@@ -420,26 +413,26 @@ public final class ConfigHandler {
 
         public final CombatConfig combatConfig;
 
-        public final ModConfigSpec.BooleanValue hasBossBar;
+        public final BooleanValue hasBossBar;
 
-        public final ModConfigSpec.BooleanValue healsOutOfBattle;
+        public final BooleanValue healsOutOfBattle;
 
-        public final ModConfigSpec.ConfigValue<? extends String> whichItem;
+        public final ConfigValue<? extends String> whichItem;
 
-        public final ModConfigSpec.IntValue howMany;
+        public final IntValue howMany;
 
-        public final ModConfigSpec.BooleanValue resetHealthWhenRespawn;
+        public final BooleanValue resetHealthWhenRespawn;
 
-        public final ModConfigSpec.IntValue spawnHealersThreshold;
+        public final IntValue spawnHealersThreshold;
     }
 
     public static class Frostmaw {
-        Frostmaw(final ModConfigSpec.Builder builder) {
+        Frostmaw(final ForgeConfigSpec.Builder builder) {
             builder.push("frostmaw");
             generationConfig = new GenerationConfig(builder, 25, 8,
-                    new BiomeConfig(builder, Collections.singletonList(string(Tags.Biomes.IS_SNOWY) + "," + inverted(Tags.Biomes.IS_OCEAN) + "," + inverted(Tags.Biomes.IS_RIVER) + "," + inverted(Tags.Biomes.IS_BEACH) + "," + inverted(Tags.Biomes.IS_FOREST) + "," + inverted(Tags.Biomes.IS_TAIGA)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("forge:is_snowy,!minecraft:is_ocean,!minecraft:is_river,!minecraft:is_beach,!minecraft:is_forest,!minecraft:is_taiga"), Collections.emptyList(), Collections.emptyList()),
                     50, 100,
-                    Arrays.asList(string(BuiltinStructureSets.VILLAGES), string(BuiltinStructureSets.PILLAGER_OUTPOSTS))
+                    Arrays.asList("minecraft:villages", "minecraft:pillager_outposts")
             );
             combatConfig = new CombatConfig(builder, 1, 1);
             this.hasBossBar = builder.comment("Disable/enable Frostmaw's boss health bar")
@@ -461,20 +454,20 @@ public final class ConfigHandler {
 
         public final CombatConfig combatConfig;
 
-        public final ModConfigSpec.BooleanValue stealableIceCrystal;
+        public final BooleanValue stealableIceCrystal;
 
-        public final ModConfigSpec.BooleanValue hasBossBar;
+        public final BooleanValue hasBossBar;
 
-        public final ModConfigSpec.BooleanValue healsOutOfBattle;
+        public final BooleanValue healsOutOfBattle;
 
-        public final ModConfigSpec.BooleanValue resetHealthWhenRespawn;
+        public final BooleanValue resetHealthWhenRespawn;
     }
 
     public static class Sculptor {
-        Sculptor(final ModConfigSpec.Builder builder) {
+        Sculptor(final ForgeConfigSpec.Builder builder) {
             builder.push("sculptor");
             generationConfig = new GenerationConfig(builder, 25, 8,
-                    new BiomeConfig(builder, Collections.singletonList(string(Tags.Biomes.IS_MOUNTAIN_PEAK)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("forge:is_peak"), Collections.emptyList(), Collections.emptyList()),
                     120, 200,
                     Collections.emptyList()
             );
@@ -493,7 +486,7 @@ public final class ConfigHandler {
                     .define("has_boss_bar", true);
             this.whichItem = builder.comment("Which item the Sculptor desires in exchange for a chance to try his challenge")
                     .translation(LANG_PREFIX + "trade_which_item")
-                    .define("trade_which_item", string(ItemHandler.BLUFF_ROD), ITEM_NAME_PREDICATE);
+                    .define("trade_which_item", "mowziesmobs:bluff_rod", ITEM_NAME_PREDICATE);
             this.howMany = builder.comment("How many of the item the Sculptor desires in exchange for a chance to try his challenge")
                     .translation(LANG_PREFIX + "trade_how_many")
                     .defineInRange("trade_how_many", 1, 0, 64);
@@ -507,23 +500,23 @@ public final class ConfigHandler {
 
         public final CombatConfig combatConfig;
 
-        public final ModConfigSpec.IntValue testHeight;
+        public final IntValue testHeight;
 
-        public final ModConfigSpec.IntValue testTimeLimit;
+        public final IntValue testTimeLimit;
 
-        public final ModConfigSpec.BooleanValue healsOutOfBattle;
+        public final BooleanValue healsOutOfBattle;
 
-        public final ModConfigSpec.BooleanValue hasBossBar;
+        public final BooleanValue hasBossBar;
 
-        public final ModConfigSpec.ConfigValue<? extends String> whichItem;
+        public final ConfigValue<? extends String> whichItem;
 
-        public final ModConfigSpec.IntValue howMany;
+        public final IntValue howMany;
 
-        public final ModConfigSpec.BooleanValue disappearAfterReward;
+        public final BooleanValue disappearAfterReward;
     }
 
     public static class Bluff {
-        Bluff(final ModConfigSpec.Builder builder) {
+        Bluff(final ForgeConfigSpec.Builder builder) {
             builder.push("bluff");
             spawnConfig = new SpawnConfig(builder,
                     10, 2, 3, 1,
@@ -543,15 +536,15 @@ public final class ConfigHandler {
     }
 
     public static class Elokosa {
-        Elokosa(final ModConfigSpec.Builder builder) {
+        Elokosa(final ForgeConfigSpec.Builder builder) {
             builder.push("Elokosa");
             spawnConfig = new SpawnConfig(builder,
                     5, 1, 1, 1,
-                    new BiomeConfig(builder, Collections.singletonList(string(Tags.Biomes.IS_JUNGLE)), Collections.emptyList(), Collections.emptyList()),
+                    new BiomeConfig(builder, Collections.singletonList("minecraft:is_jungle"), Collections.emptyList(), Collections.emptyList()),
                     Collections.emptyList(),
-                    Arrays.asList(string(BlockTags.LEAVES), string(BlockTags.LOGS)),
+                    Arrays.asList("minecraft:animals_spawnable_on", "minecraft:leaves", "minecraft:logs"),
                     -65, 60, false, false, false,
-                    Arrays.asList(string(BuiltinStructureSets.VILLAGES), string(BuiltinStructureSets.PILLAGER_OUTPOSTS))
+                    Arrays.asList("minecraft:villages", "minecraft:pillager_outposts")
             );
             combatConfig = new CombatConfig(builder,1, 1);
             builder.pop();
@@ -563,7 +556,7 @@ public final class ConfigHandler {
     }
 
     public static class WroughtHelm {
-        WroughtHelm(final ModConfigSpec.Builder builder) {
+        WroughtHelm(final ForgeConfigSpec.Builder builder) {
             builder.push("wrought_helm");
             armorConfig = new ArmorConfig(builder);
             breakable = builder.comment("Set to true for the Wrought Helm to have limited durability.")
@@ -574,11 +567,11 @@ public final class ConfigHandler {
 
         public final ArmorConfig armorConfig;
 
-        public final ModConfigSpec.BooleanValue breakable;
+        public final BooleanValue breakable;
     }
 
     public static class AxeOfAThousandMetals {
-        AxeOfAThousandMetals(final ModConfigSpec.Builder builder) {
+        AxeOfAThousandMetals(final ForgeConfigSpec.Builder builder) {
             builder.push("axe_of_a_thousand_metals");
             toolConfig = new ToolConfig(builder, 9, 0.9f);
             breakable = builder.comment("Set to true for the Axe of a Thousand Metals to have limited durability.")
@@ -589,11 +582,11 @@ public final class ConfigHandler {
 
         public final ToolConfig toolConfig;
 
-        public final ModConfigSpec.BooleanValue breakable;
+        public final BooleanValue breakable;
     }
 
     public static class SolVisage {
-        SolVisage(final ModConfigSpec.Builder builder) {
+        SolVisage(final ForgeConfigSpec.Builder builder) {
             builder.push("sol_visage");
             armorConfig = new ArmorConfig(builder);
             breakable = builder.comment("Set to true for the Sol Visage to have limited durability.")
@@ -607,13 +600,13 @@ public final class ConfigHandler {
 
         public final ArmorConfig armorConfig;
 
-        public final ModConfigSpec.BooleanValue breakable;
+        public final BooleanValue breakable;
 
-        public final ModConfigSpec.IntValue maxFollowers;
+        public final IntValue maxFollowers;
     }
 
     public static class UmvuthanaMask {
-        UmvuthanaMask(final ModConfigSpec.Builder builder) {
+        UmvuthanaMask(final ForgeConfigSpec.Builder builder) {
             builder.push("umvuthana_mask");
             armorConfig = new ArmorConfig(builder);
             builder.pop();
@@ -623,7 +616,7 @@ public final class ConfigHandler {
     }
 
     public static class GeomancerArmor {
-        GeomancerArmor(final ModConfigSpec.Builder builder) {
+        GeomancerArmor(final ForgeConfigSpec.Builder builder) {
             builder.push("geomancerArmor");
             armorConfig = new ArmorConfig(builder);
             builder.pop();
@@ -633,7 +626,7 @@ public final class ConfigHandler {
     }
 
     public static class IceCrystal {
-        IceCrystal(final ModConfigSpec.Builder builder) {
+        IceCrystal(final ForgeConfigSpec.Builder builder) {
             builder.push("ice_crystal");
             attackMultiplier = builder.comment("Multiply all damage done with the ice crystal by this amount.")
                     .translation(LANG_PREFIX + "attack_multiplier")
@@ -650,18 +643,18 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.DoubleValue attackMultiplier;
+        public final DoubleValue attackMultiplier;
 
-        public final ModConfigSpec.BooleanValue breakable;
+        public final BooleanValue breakable;
 
-        public final ModConfigSpec.IntValue durability;
+        public final IntValue durability;
         public int durabilityValue;
 
-        public final ModConfigSpec.IntValue freezeDuration;
+        public final IntValue freezeDuration;
     }
 
     public static class EarthrendGauntlet {
-        EarthrendGauntlet(final ModConfigSpec.Builder builder) {
+        EarthrendGauntlet(final ForgeConfigSpec.Builder builder) {
             builder.push("earthrend_gauntlet");
             attackMultiplier = builder.comment("Multiply all damage done with the Earthrend Gauntlet by this amount.")
                     .translation(LANG_PREFIX + "attack_multiplier")
@@ -679,20 +672,20 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.DoubleValue attackMultiplier;
+        public final DoubleValue attackMultiplier;
 
-        public final ModConfigSpec.BooleanValue breakable;
+        public final BooleanValue breakable;
 
-        public final ModConfigSpec.IntValue durability;
+        public final IntValue durability;
         public int durabilityValue;
 
         public final ToolConfig toolConfig;
 
-        public final ModConfigSpec.BooleanValue enableTunneling;
+        public final BooleanValue enableTunneling;
     }
 
     public static class Spear {
-        Spear(final ModConfigSpec.Builder builder) {
+        Spear(final ForgeConfigSpec.Builder builder) {
             builder.push("spear");
             toolConfig = new ToolConfig(builder, 5, 1.6f);
             builder.pop();
@@ -702,7 +695,7 @@ public final class ConfigHandler {
     }
 
     public static class NagaFangDagger {
-        NagaFangDagger(final ModConfigSpec.Builder builder) {
+        NagaFangDagger(final ForgeConfigSpec.Builder builder) {
             builder.push("naga_fang_dagger");
             toolConfig = new ToolConfig(builder, 3, 2);
             poisonDuration = builder.comment("Duration in ticks of the poison effect (20 ticks = 1 second).")
@@ -716,13 +709,13 @@ public final class ConfigHandler {
 
         public final ToolConfig toolConfig;
 
-        public final ModConfigSpec.IntValue poisonDuration;
+        public final IntValue poisonDuration;
 
-        public final ModConfigSpec.DoubleValue backstabDamageMultiplier;
+        public final DoubleValue backstabDamageMultiplier;
     }
 
     public static class Blowgun {
-        Blowgun(final ModConfigSpec.Builder builder) {
+        Blowgun(final ForgeConfigSpec.Builder builder) {
             builder.push("blowgun");
             poisonDuration = builder.comment("Duration in ticks of the poison effect (20 ticks = 1 second).")
                     .translation(LANG_PREFIX + "poison_duration")
@@ -733,13 +726,13 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.DoubleValue attackDamage;
+        public final DoubleValue attackDamage;
 
-        public final ModConfigSpec.IntValue poisonDuration;
+        public final IntValue poisonDuration;
     }
 
     public static class SunsBlessing {
-        SunsBlessing(final ModConfigSpec.Builder builder) {
+        SunsBlessing(final ForgeConfigSpec.Builder builder) {
             builder.push("suns_blessing");
             effectDuration = builder.comment("Duration in minutes of the Sun's Blessing effect.")
                     .translation(LANG_PREFIX + "suns_blessing_duration")
@@ -756,17 +749,17 @@ public final class ConfigHandler {
                     .defineInRange("supernova_cost", 60, 0, Integer.MAX_VALUE);
         }
 
-        public final ModConfigSpec.DoubleValue sunsBlessingAttackMultiplier;
+        public final DoubleValue sunsBlessingAttackMultiplier;
 
-        public final ModConfigSpec.IntValue effectDuration;
+        public final IntValue effectDuration;
 
-        public final ModConfigSpec.IntValue solarBeamCost;
+        public final IntValue solarBeamCost;
 
-        public final ModConfigSpec.IntValue supernovaCost;
+        public final IntValue supernovaCost;
     }
 
     public static class SculptorStaff {
-        SculptorStaff(final ModConfigSpec.Builder builder) {
+        SculptorStaff(final ForgeConfigSpec.Builder builder) {
             builder.push("sculptor_staff");
             toolConfig = new ToolConfig(builder, 3, 1f);
             attackMultiplier = builder.comment("Multiply all damage done with the Sculptor Staff by this amount.")
@@ -774,13 +767,13 @@ public final class ConfigHandler {
                     .defineInRange("attack_multiplier", 1f, 0d, Double.MAX_VALUE);
             builder.pop();
         }
-        public final ModConfigSpec.DoubleValue attackMultiplier;
+        public final DoubleValue attackMultiplier;
 
         public final ToolConfig toolConfig;
     }
 
     public static class ElokosaPaw {
-        ElokosaPaw(final ModConfigSpec.Builder builder) {
+        ElokosaPaw(final ForgeConfigSpec.Builder builder) {
             builder.push("elokosa_paw");
             effectDuration = builder.comment("How long effects inflicted by Elokosa Paws last in ticks")
                     .translation(LANG_PREFIX + "effect_duration")
@@ -793,16 +786,16 @@ public final class ConfigHandler {
                     .defineInRange("number_of_uses", 3, 1, Integer.MAX_VALUE);
             builder.pop();
         }
-        
-        public final ModConfigSpec.IntValue effectDuration;
-        
-        public final ModConfigSpec.IntValue cooldown;
-        
-        public final ModConfigSpec.IntValue numberOfUses;
+
+        public final IntValue effectDuration;
+
+        public final IntValue cooldown;
+
+        public final IntValue numberOfUses;
     }
 
     public static class Mobs {
-        Mobs(final ModConfigSpec.Builder builder) {
+        Mobs(final ForgeConfigSpec.Builder builder) {
             builder.push("mobs");
             FROSTMAW = new Frostmaw(builder);
             UMVUTHI = new Umvuthi(builder);
@@ -842,7 +835,7 @@ public final class ConfigHandler {
     }
 
     public static class ToolsAndAbilities {
-        ToolsAndAbilities(final ModConfigSpec.Builder builder) {
+        ToolsAndAbilities(final ForgeConfigSpec.Builder builder) {
             builder.push("tools_and_abilities");
             SUNS_BLESSING = new SunsBlessing(builder);
             WROUGHT_HELM = new WroughtHelm(builder);
@@ -889,7 +882,7 @@ public final class ConfigHandler {
 
     public static class Client {
 
-        private Client(final ModConfigSpec.Builder builder) {
+        private Client(final ForgeConfigSpec.Builder builder) {
             builder.push("client");
             this.glowEffect = builder.comment("Toggles the lantern glow effect, which may look bad with certain shaders.")
                     .translation(LANG_PREFIX + "glow_effect")
@@ -918,25 +911,25 @@ public final class ConfigHandler {
             builder.pop();
         }
 
-        public final ModConfigSpec.BooleanValue glowEffect;
+        public final BooleanValue glowEffect;
 
-        public final ModConfigSpec.BooleanValue umvuthanaFootprints;
+        public final BooleanValue umvuthanaFootprints;
 
-        public final ModConfigSpec.BooleanValue doCameraShakes;
+        public final BooleanValue doCameraShakes;
 
-        public final ModConfigSpec.BooleanValue playBossMusic;
+        public final BooleanValue playBossMusic;
 
-        public final ModConfigSpec.BooleanValue customBossBars;
+        public final BooleanValue customBossBars;
 
-        public final ModConfigSpec.BooleanValue customPlayerAnims;
+        public final BooleanValue customPlayerAnims;
 
-        public final ModConfigSpec.BooleanValue hidePlayerAnimsInFirstPerson;
+        public final BooleanValue hidePlayerAnimsInFirstPerson;
 
-        public final ModConfigSpec.BooleanValue doUmvuthanaCraneHealSound;
+        public final BooleanValue doUmvuthanaCraneHealSound;
     }
 
     public static class Common {
-        private Common(final ModConfigSpec.Builder builder) {
+        private Common(final ForgeConfigSpec.Builder builder) {
             TOOLS_AND_ABILITIES = new ToolsAndAbilities(builder);
             MOBS = new Mobs(builder);
         }
@@ -944,33 +937,5 @@ public final class ConfigHandler {
         public final ToolsAndAbilities TOOLS_AND_ABILITIES;
 
         public final Mobs MOBS;
-    }
-
-    private static String inverted(Object object) {
-        return "!" + string(object);
-    }
-
-    private static String string(Object object) {
-        if (object instanceof TagKey<?> tag) {
-            return tag.location().toString();
-        }
-
-        if (object instanceof Holder<?> holder) {
-            return holder.getRegisteredName();
-        }
-
-        if (object instanceof ResourceKey<?> key) {
-            return key.location().toString();
-        }
-
-        if (object instanceof Item item) {
-            return string(item.builtInRegistryHolder());
-        }
-
-        if (object instanceof Block block) {
-            return string(block.builtInRegistryHolder());
-        }
-
-        throw new IllegalArgumentException("Cannot handle object type [" + object.getClass() + "]");
     }
 }
